--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,20 @@
-version: '2'
- 
+version: "3"
+
 services:
-    reverseproxy:
-        image: reverseproxy
+    node1:
+        build: ./node1
+        container_name: node1
         ports:
-            - 8080:8080
-            - 8081:8081
-        restart: always
- 
-    nginx:
-        depends_on:
-            - reverseproxy
-        image: nginx:alpine
-        restart: always
- 
-    apache:
-        depends_on:
-            - reverseproxy
-        image: httpd:alpine
-        restart: always
+            - "81:80"
+
+    node2:
+        build: ./node2
+        container_name: node2
+        ports:
+            - "82:80"
+
+    haproxy:
+        build: ./haproxy
+        container_name: haproxy
+        ports:
+            - "80:80"
